--- a/HTML-LogIn/Userinfo.html
+++ b/HTML-LogIn/Userinfo.html
@@ -5,7 +5,7 @@
     <title>User Entry Form</title>
     <link rel="stylesheet" href="/addModule.css">
     <link rel="stylesheet" href="/Nav&SideNav/nav&SideNav.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
     <link rel="stylesheet" href="/bootstrap-5.3.0-alpha3-dist/css/bootstrap.css">
 </head>
 <body>
@@ -60,9 +60,8 @@
                   <tr>
                     <div >
                       <div class="row-contentSearch fw-bold px-4 id-search">
-                        <!-- <input type="text" id="searchedDisplayID" class="form-control" placeholder="Employee Display Id"
-                        onkeyup="Search(this)"
-                        > -->
+                        <input type="text" id="EmployeeName" class="form-control" placeholder="Employee "
+                        >
                       </div>
                     </div>
                   </tr>
