menu, module, report, reportsuiteparent, vendor, userpermission alert added

--- a/addMenu.html
+++ b/addMenu.html
@@ -11,7 +11,7 @@
   <body>
     <div id="Nav&SideNav"></div>
     <div id="motherDiv">
-      <!-- <div id ="AddMenuSectionName">Add Menu</div> -->
+      <div id ="AddMenuSectionName">Add Menu</div>
       <div class=" AddMenuInputContainer">
       </div>
 
