--- a/addReportSuiteParentField.html
+++ b/addReportSuiteParentField.html
@@ -33,8 +33,8 @@
     <div style="margin: 30px 60px 0px;" class="d-flex justify-content-end button-div">
       <button type="button" class="btn AddMenuButton" id="saveTheData" > <i class="fa-solid fa-download"></i> Save </button>
       <!-- <input type="button" class="btn AddMenuButton" onclick="searchModule()" class="btn btn-primary"  value="Search"> -->
-      <button type="button" class="btn AddMenuButton" value="Delete" onclick="deleteModule()"><i class="fa-sharp fa-solid fa-trash"></i> Delete</button>
-      <button type="button" class="btn AddMenuButton" value="Update" onclick="updateModule()"> <i class="fa-solid fa-arrows-rotate" ></i> Update</button> 
+      <button type="button" class="btn AddMenuButton" value="Delete"><i class="fa-sharp fa-solid fa-trash"></i> Delete</button>
+      <button type="button" class="btn AddMenuButton" value="Update"> <i class="fa-solid fa-arrows-rotate" ></i> Update</button> 
       <button type="button" class="btn AddMenuButton " onclick ="displayOldData()"><i class="fa-regular fa-eye"></i> Preview</button>
     </div>
 
