--- a/userPermission.html
+++ b/userPermission.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/userPermission.css">
     <!-- <link rel="stylesheet" href="/HTML-LogIn/module.css"> -->
     <link rel="stylesheet" href="/bootstrap-5.3.0-alpha3-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
     <link rel="stylesheet" href="/Nav&SideNav/nav&SideNav.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
                         <div class="dropdown w-50">
                             <input style="width: 100%;" type="button" id="loadusername" value="Select an option" class="dropdown-toggle">
                             <div id="dropdownlist" class="dropdown-content w-100">
-                                <input class="w-100" type="text" id="usernames">
+                                <input class="w-100" type="text" id="usernames" placeholder="Enter username">
                                 <div id="username">
     
                                 </div>
@@ -55,7 +55,7 @@
                             <div class="col-4 grid-item">  
                                 <label for=""> Interfaces </label>
                             </div>
-                            <div class="col-1 grid-item">
+                            <div class="col grid-item">
                                 <div class="col-1 headerchecklist">
                                     <div class="form-check d-flex justify-content-center align-items-center">
                                         <input class="form-check-input" type="checkbox" value="" id="sellectAllView">
@@ -63,7 +63,7 @@
                                 </div>
                                 <label for=""> View </label>
                             </div>
-                            <div class="col-1 grid-item">
+                            <div class="col grid-item">
                                 <div class="col-1 headerchecklist">
                                     <div class="form-check d-flex justify-content-center align-items-center">
                                         <input class="form-check-input" type="checkbox" value="" id="sellectAllAdd">
@@ -71,7 +71,7 @@
                                 </div>
                                 <label for=""> Add </label>
                             </div>
-                            <div class="col-1 grid-item">
+                            <div class="col grid-item">
                                 <div class="col-1 headerchecklist">
                                     <div class="form-check d-flex justify-content-center align-items-center">
                                         <input class="form-check-input" type="checkbox" value="" id="sellectAllModify">
@@ -79,7 +79,7 @@
                                 </div>
                                 <label for=""> Modify </label>
                             </div>
-                            <div class="col-1 grid-item">
+                            <div class="col grid-item">
                                 <div class="col-1 headerchecklist">
                                     <div class="form-check d-flex justify-content-center align-items-center">
                                         <input class="form-check-input" type="checkbox" value="" id="sellectAllDelete">
